[package]
name = "wimage-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
wimage = { path = "../wimage" }
wasm-bindgen = "0.2.118"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.56"
js-sys = "0.3.83"
web-sys = { version = "0.3.83", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }