[package]
name = "wimage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
png = "0.18.0"
zstd = "0.13.3"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "imageprocessing_diff"
harness = false
